--- a/index.html
+++ b/index.html
@@ -128,8 +128,208 @@
             class="photo-grid__item"
           />
         </section>
+        <ul class="places places_location_content">
+          <li class="places_place">
+            <h3 class="places__title">Куршская коса</h3>
+            <div class="places__website">
+              <div class="places__url-heading">URL</div>
+              <a href="http://park-kosa.ru" class="places__link"
+                >park-kosa.ru</a
+              >
+            </div>
+            <img
+              src="./images/place-kosa.jpg"
+              alt="Куршская коса"
+              class="places__image"
+            />
+            <div class="places__paragraph-wrapper">
+              <div class="places__paragraph">
+                Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете
+                увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского
+                залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн
+                Балтийского моря с&nbsp;другой. Уникальная природная зона
+                на&nbsp;краю российского анклава.
+              </div>
+              <div class="places__paragraph">
+                На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для
+                путешественника и&nbsp;исследователя там&nbsp;же
+                по&nbsp;соседству&nbsp;&mdash; самая западная точка России,
+                Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи
+                небольших приморских городов. Атмосфера здешних мест исключает
+                суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального,
+                прохладного моря.
+              </div>
+            </div>
+          </li>
+          <li class="places_place">
+            <div class="places__title">Кольский</div>
+            <div class="places__website">
+              <div class="places__url-heading">URL</div>
+              <a
+                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                class="places__link"
+                >National Geographic</a
+              >
+            </div>
+            <img
+              src="./images/place-kolsky.jpg"
+              alt="Кольский"
+              class="places__image"
+            />
+            <div class="places__paragraph-wrapper">
+              <div class="places__paragraph">
+                Почти весь полуостров находится за&nbsp;Полярным кругом.
+                Саамская тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга,
+                а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан,
+                прикидывающийся Баренцевым морем.
+              </div>
+              <div class="places__paragraph">
+                Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали
+                историю арктического фестиваля в&nbsp;Териберке. Возможно, слово
+                &laquo;Хибины&raquo; не осталось под снегом школьных
+                воспоминаний об&nbsp;уроках географии. Возможно,
+                вы&nbsp;не&nbsp;интересовались пронизывающей земную кору
+                сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно
+                накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние
+                начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.
+              </div>
+            </div>
+          </li>
+          <li class="places_place">
+            <div class="places__title">Алтай</div>
+            <div class="places__website">
+              <div class="places__url-heading">URL</div>
+              <a
+                href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                class="places__link"
+                >Facebook</a
+              >
+            </div>
+            <img
+              src="./images/place-altai.jpg"
+              alt="Алтай"
+              class="places__image"
+            />
+            <div class="places__paragraph-wrapper">
+              <div class="places__paragraph">
+                Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России.
+                В&nbsp;первую очередь из-за гор: если ехать вдоль хребта,
+                вы&nbsp;увидите склоны, усыпанные соснами, горные реки
+                и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в&nbsp;автомобиле
+                окна, сможете познакомиться с&nbsp;невидимым чудом здешних
+                мест&nbsp;&mdash; горным воздухом.
+              </div>
+              <div class="places__paragraph">
+                Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего
+                летом. Так вы&nbsp;увидите всё разнообразие местной флоры
+                и&nbsp;фауны. По&nbsp;лесам Алтая бродят лоси, над хребтами
+                летают орлы, а&nbsp;на&nbsp;равнинах пасутся косули.
+                И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели Алтайского
+                края.
+              </div>
+            </div>
+          </li>
+          <li class="places_place">
+            <div class="places__title">Зимний Байкал</div>
+            <div class="places__website">
+              <div class="places__url-heading">URL</div>
+              <a href="https://vk.com/baikalmile" class="places__link"
+                >https://vk.com/baikalmile</a
+              >
+            </div>
+            <img
+              src="./images/place-winter-baikal.jpg"
+              alt="Зимний Байкал"
+              class="places__image"
+            />
+            <div class="places__paragraph-wrapper">
+              <div class="places__paragraph">
+                Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие
+                также знают, что это самый большой источник пресной воды
+                и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.
+              </div>
+              <div class="places__paragraph">
+                Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место для
+                соревнований по&nbsp;скийорингу. Это такой вид спорта, когда
+                лыжник привязывает себя к&nbsp;мотоциклу, и&nbsp;тандем
+                старается развить как можно б&oacute;льшую скорость
+                на&nbsp;льду. В&nbsp;марте 2019 года на&nbsp;фестивале
+                &laquo;Байкальская миля&raquo; был поставлен мировой
+                рекорд&nbsp;&mdash; 197.011&nbsp;км/ч.
+              </div>
+            </div>
+          </li>
+          <li class="places_place">
+            <div class="places__title">Карелия</div>
+            <div class="places__website">
+              <div class="places__url-heading">URL</div>
+              <a href="http://vodlozero.ru" class="places__link"
+                >http://vodlozero.ru/</a
+              >
+            </div>
+            <img
+              src="./images/place-karelia.jpg"
+              alt="Карелия"
+              class="places__image"
+            />
+            <div class="places__paragraph-wrapper">
+              <div class="places__paragraph">
+                Сибирь заканчивается не&nbsp;на&nbsp;Урале,
+                а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница
+                не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
+                на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских национальных
+                парков из-за непроходимых болот никогда не&nbsp;знали топора.
+                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь
+                к&nbsp;живому существу, видевшему солнце раньше, чем увидал его
+                Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню километров
+                не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья
+                в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями.
+                Чтобы все знали, кто тут хозяин.
+              </div>
+            </div>
+          </li>
+        </ul>
+        <section class="cover">
+          <a
+            title="красивый фон"
+            class="cover__link"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            target="_blank"
+          >
+            <h3 class="cover__title">
+              До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;
+            </h3>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
+            </p>
+          </a>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__wrapper">
+          <nav class="footer__nav">
+            <ul class="footer__link-list">
+              <li class="footer__link-item">
+                <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+              </li>
+              <li class="footer__link-item">
+                <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+              </li>
+              <li class="footer__link-item">
+                <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+              </li>
+              <li class="footer__link-item">
+                <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+              </li>
+              <li class="footer__link-item">
+                <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer__copyright">© 2022. Тимур</div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
