--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="body">
     <div class="root">
-      <header class="header header_place_page">
+      <header class="header">
         <img src="./images/header-logo.svg" alt="лого" class="header__logo" />
         <ul class="header__lang-links">
           <li>
